Change log started October 2009.

February 2010
================================================================================
 + A few changes were needed for it to actually work.

January 2010
================================================================================
 + Began working on version 2
 + Split out get_file() to mirror.get().
 + Renamed MainHandler to LegacyHandler and added ProxyHandler.


October 2009
================================================================================
 - Use simplejson so json.py can be removed.
 + Use memcache to cache file downloads.